@@ -193,3 +193,9 @@ Images used:
   border-left: 1px solid #91CDF5;
 }
 
+.top-post-footer {
+  border: 2px solid #91CDF5;
+}
+
+
+
